--- a/txt.plist
+++ b/txt.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/xiaoyebukuang/down/blob/master/SYQB.ipa</string>
+					<string>https://raw.githubusercontent.com/xiaoyebukuang/down/master/SYQB1.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
